--- a/sabsite/mainpage.html
+++ b/sabsite/mainpage.html
@@ -15,6 +15,7 @@
           <ul><a href="mailto:smashatberkeley@berkeley.edu">Contact</a></ul>
         </list>
         <!--add logo, put to left of nav-->
+        <!--test to see if push works-->
     </div>
     <div id="about">
         <p><strong>OUR MISSION</strong> is to bring together everyone with a love for Super Smash Brothers and to create a long-lasting Smash community here at Cal.
