changed file names

--- a/sabsite/index.html
+++ b/sabsite/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link href="./mainpage.css" rel="stylesheet">
-    <script src="./mainpage.js"></script>
+    <link href="./index.css" rel="stylesheet">
+    <script src="./index.js"></script>
     <title>Smash At Berkeley</title>    
 </head>
 <body>
