--- a/sabsite/index.html
+++ b/sabsite/index.html
@@ -12,7 +12,7 @@
           <ul><a href="https://discord.gg/G7RmUGG">Join</a></ul>
           <ul><a href="https://www.twitch.tv/smashatberkeley">Stream</a></ul>
           <ul><a href="./results.html">Results</a></ul>
-          <ul><a href="mailto:smashatberkeley@berkeley.edu">Contact</a></ul>
+          <ul><a href="mailto:smashatberkeley@gmail.com">Contact</a></ul>
         </list>
         <!--add logo, put to left of nav-->
         <!--test to see if push works-->
@@ -20,8 +20,8 @@
     <div id="about">
         <p><strong>OUR MISSION</strong> is to bring together everyone with a love for Super Smash Brothers and to create a long-lasting Smash community here at Cal.
            Smash at Berkeley is the premiere club that provides a place to learn, grow, and inspire a community of smashers here at the world's No. 1 public university.
-           Through workshops, smashfests, crew battles, and tournaments, we aim to create a diverse, but unified group of people with a love for the Super Smash Brother
-           series. Welcome to Bear Territory.</p>
+           Through our various events, we aim to create a diverse, but unified group of people with a love for the Super Smash Brothers
+           series.</p>
     </div>
     <!-- Slideshow container -->
 <div class="slideshow-container">
