--- a/sabsite/results.html
+++ b/sabsite/results.html
@@ -115,6 +115,36 @@
                     <td class="tourney">Winner of <a href="https://www.start.gg/tournament/finals-destination-12/event/ultimate-singles"> Finals Destination 12</a></td>
                     <td class="date">May 5th, 2023</td>
                 </tr>
+
+                <tr>
+                    <td class="name">ERA</td>
+                    <td class="tourney">Winner of <a href="https://www.start.gg/tournament/berkeley-ultimate-smashfest-11/details"> Berkeley Ultimate Smashfest #11</a></td>
+                    <td class="date">September 9th, 2023</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+    <div id="ult_redemption">
+        <h3><b>Ultimate (Redemption):</b></h3>
+        <table>
+            <tbody>
+                <tr>
+                    <td class="name">thrill</td>
+                    <td class="tourney">Winner of <a href="https://www.start.gg/tournament/berkeley-ultimate-smashfest-8/event/redemption-bracket"> Berkeley Ultimate Smashfest #8 Redemption Bracket</a></td>
+                    <td class="date">March 11th, 2023</td>
+                </tr>
+
+                <tr>
+                    <td class="name">No Role Modelz by J Cole</td>
+                    <td class="tourney">Winner of <a href="https://www.start.gg/tournament/berkeley-ultimate-smashfest-9/event/redemption-bracket"> Berkeley Ultimate Smashfest #9 Redemption Bracket</a></td>
+                    <td class="date">April 8th, 2023</td>
+                </tr>
+
+                <tr>
+                    <td class="name">yimchi</td>
+                    <td class="tourney">Winner of <a href="https://www.start.gg/tournament/berkeley-ultimate-smashfest-11/event/redemption-bracket"> Berkeley Ultimate Smashfest #11 Redemption Bracket</a></td>
+                    <td class="date">September 9th, 2023</td>
+                </tr>
             </tbody>
         </table>
     </div>
